--- a/index.html
+++ b/index.html
@@ -5,8 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    li{
+      cursor: pointer;
+      list-style: none;
+    }
+    .main>li>ul{
+      display:none;
+    }
+    .main>li>ul.show{
+      display:block;
+    }
+  </style>
 </head>
 <body>
-  1111
+  <ul class="main">
+    <li class="Menus">
+      HTML
+      <ul>
+        <li>111</li>
+      </ul>
+    </li>
+    <li class="Menus">
+      CSS
+      <ul>
+        <li>222</li>
+      </ul>
+    </li>
+    <li class="Menus">
+      JS
+      <ul>
+        <li>333</li>
+      </ul>
+    </li>
+  </ul>
+  <script>
+    let ulDom = document.querySelector(".main");
+    ulDom.onclick = function(e){
+      console.log(e.target.className);
+      let liDomName = e.target.className;
+      let ulDomName = e.target.querySelector('ul').className;
+      console.log(ulDomName.length);
+      if(liDomName === 'Menus' && ulDomName.length === 0){
+        e.target.querySelector('ul').className = 'show';
+      }else if(liDomName === 'Menus' && ulDomName.length !== 0){
+        e.target.querySelector('ul').className = ''
+      }
+    }
+  </script>
 </body>
 </html>
