--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
+    ul{
+      padding-left:0;
+    }
     li{
       cursor: pointer;
       list-style: none;
+      margin:5px 0;
+    }
+    .menusTitle{
+      background:#ddd;
+      height:30px;
+      line-height: 30px;
+      padding-left:20px;
     }
     span{
       color:red;
     }
     .main>li>ul{
       display:none;
+      padding-left:40px;
     }
     .main>li>ul.show{
       display:block;
+      background:#eee;
     }
   </style>
 </head>
