--- a/index.html
+++ b/index.html
@@ -31,10 +31,22 @@
       display:block;
       background:#eee;
     }
+    input{
+      height:25px;
+      width:250px;
+      border-radius: 5px;
+      margin-right:10px;
+      padding-left:10px;
+    }
+    button{
+      height:30px;
+      width:50px;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
-  <input type="text" class="keywords"><button id="search">搜索</button>
+  <input type="text" class="keywords" placeholder="请输入关键词搜索"><button id="search">搜索</button>
   <ul class="main">
     <!-- <li class="Menus">
       HTML
