--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       border-radius: 5px;
       margin-right:10px;
       padding-left:10px;
+      outline: none;
     }
     button{
       height:30px;
